--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
         <section class="images">
             
             <img src="graphic/tile1.gif"/>
+              <img src="graphic/mid1.gif"/>
             <img src="graphic/tile2.gif"/>
+              <img src="graphic/mid2.gif"/>
             <img src="graphic/tile3.gif"/>
+              <img src="graphic/mid3.gif"/>
             <img src="graphic/tile4.gif"/>
             <img src="graphic/tile5.gif"/>
             <img src="graphic/tile6.gif"/>
