--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="images">
             
             <img src="graphic/tile1.gif"/>
-              <img src="graphic/mid1.gif"/>
+              <img src="graphic/mid1.gif">
             <img src="graphic/tile2.gif"/>
               <img src="graphic/mid2.gif"/>
             <img src="graphic/tile3.gif"/>
