--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <img src="graphic/tile3.gif"/>
               <img src="graphic/mid2.gif">
             <img src="graphic/tile4.gif"/>
-              <img src="graphic/mid3.gif">
+              <img src="graphic/mid3.png">
             <img src="graphic/tile5.gif"/>
+              <img src="graphic/mid4.png">
             <img src="graphic/tile6.gif"/>
             <img src="graphic/tile7.gif"/>
             <img src="graphic/tile8.gif"/>
