--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="graphic/tile2.gif"/>
               <img src="graphic/mid1.gif">
             <img src="graphic/tile3.gif"/>
-              <img src="graphic/mid2.gif">
+              <img src="graphic/mid2.png">
             <img src="graphic/tile4.gif"/>
               <img src="graphic/mid3.png">
             <img src="graphic/tile5.gif"/>
