--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <img src="graphic/tile5.gif"/>
               <img src="graphic/mid4.png">
             <img src="graphic/tile6.gif"/>
+              <img src="graphic/mid5.png">
             <img src="graphic/tile7.gif"/>
             <img src="graphic/tile8.gif"/>
             <img src="graphic/tile9.gif"/>
