--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <img src="graphic/tile7.gif"/>
               <img src="graphic/mid6.png">
             <img src="graphic/tile8.gif"/>
+              <img src="graphic/mid7.png">
             <img src="graphic/tile9.gif"/>
             <img src="graphic/tile10.gif"/>
            
