--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <img src="graphic/tile8.gif"/>
               <img src="graphic/mid7.png">
             <img src="graphic/tile9.gif"/>
+              <img src="graphic/mid8.png">
             <img src="graphic/tile10.gif"/>
            
       
