--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <img src="graphic/tile9.gif"/>
               <img src="graphic/mid8.png">
             <img src="graphic/tile10.gif"/>
+              <img src="graphic/mid9.png">
            
       
         </section>
