--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <img src="graphic/mid9.png" style="margin-top:25px;">
             
             <img src="graphic/soc1.png">
-            <p><a href="www.swiftdm.com"><img src="graphic/soc2.png"></a></p>
+            <p><a href="https://www.leaping-man-learning.com/digital/"><img src="graphic/soc2.png"></a></p>
             <img src="graphic/soc3.png">
             <img src="graphic/soc4.png">
             
