--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img src="graphic/tile10.gif"/>
               <img src="graphic/mid9.png" style="margin-top:25px;">
             
-            <p><a href="#"><img src="graphic/soc1.png"></a><p>
+            <p><a href="tel:01212362474"><img src="graphic/soc1.png"></a><p>
             <p><a href="mailto:lfl@swiftdm.com" target="_blank"><img src="graphic/soc5.png"></a></p>
             <p><a href="https://www.leaping-man-learning.com/digital/" target="_blank"><img src="graphic/soc2.png"></a></p>
             <p><a href="https://www.linkedin.com/company/swiftdm/" target="_blank"><img src="graphic/soc3.png"></a></p>
