--- a/repo.html
+++ b/repo.html
@@ -6,6 +6,7 @@
 <body>
   <h1>Swift DM Repository</h1>
   <a href="index.html">What a Swift DM Apprentice can do for your business</a>
+  <img src="qr/SwiftDM-Apprentice.png">
   
   <h2>Swift CI Lessons</h2>
   <a href="lean-resource-gate-one-day-one.html">Gate one day one</a>
