--- a/repo.html
+++ b/repo.html
@@ -5,11 +5,11 @@
   </head>
 <body>
   <h1>Swift DM Repository</h1>
-  <a href="index.html">What a Swift DM Apprentice can do for your business</a>
-  <img src="qr/SwiftDM-Apprentice.png">
+  <a href="index.html"  target="_blank">What a Swift DM Apprentice can do for your business</a>
+  <img src="qr/SwiftDM-Apprentice.png" style="max-height:10%; max-width:10%;">
   
   <h2>Swift CI Lessons</h2>
-  <a href="lean-resource-gate-one-day-one.html">Gate one day one</a>
+  <a href="lean-resource-gate-one-day-one.html"  target="_blank">Gate one day one</a>
 
   
   </body>
