--- a/repo.html
+++ b/repo.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <title>Repository</title>
+    <style>
+      html{font-family:calibri; font-size:16px;}
   </head>
 <body>
   <h1>Swift DM Repository</h1>
   <a href="index.html"  target="_blank">What a Swift DM Apprentice can do for your business</a>
-  <img src="qr/SwiftDM-Apprentice.png" style="max-height:10%; max-width:10%;">
+  <img src="qr/SwiftDM-Apprentice.png" style="max-height:5%; max-width:5%;">
   
   <h2>Swift CI Lessons</h2>
   <a href="lean-resource-gate-one-day-one.html"  target="_blank">Gate one day one</a>
