--- a/repo.html
+++ b/repo.html
@@ -4,6 +4,7 @@
     <title>Repository</title>
     <style>
       html{font-family:calibri; font-size:16px;}
+    </style>
   </head>
 <body>
   <h1>Swift DM Repository</h1>
