--- a/lean-resource-gate-one-day-one.html
+++ b/lean-resource-gate-one-day-one.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+ <div class="container">
   <img src="gateone/tile1.jpg">
   <img src="gateone/tile2.jpg">
   <img src="gateone/tile3.jpg">
@@ -17,5 +18,6 @@
   <img src="gateone/tile9.jpg">
   <img src="gateone/tile10.jpg">
   <img src="gateone/tile11.jpg">
+ </div>
 </body>
 </html>
