--- a/lean-resource-gate-one-day-one.html
+++ b/lean-resource-gate-one-day-one.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Lean Resource Gate 1 Day 1</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" type="text/css" href="CIstyles.css">
     
 </head>
