--- a/lean-resource-gate-one-day-one.html
+++ b/lean-resource-gate-one-day-one.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <header>
  <div class="container">
   <img src="gateone/tile1.jpg">
   <img src="gateone/tile2.jpg">
@@ -20,5 +21,6 @@
   <img src="gateone/tile10.jpg">
   <img src="gateone/tile11.jpg">
  </div>
+    </header
 </body>
 </html>
