--- a/lean-resource-gate-one-day-one.html
+++ b/lean-resource-gate-one-day-one.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="CIstyle.css">
     
-        <title>Swift CI - Learn Resource - Gate One Day One</title>
+        <title>Swift CI - Lean Resource - Gate One Day One</title>
     </head>
     <body>
 
