--- a/lean-resource-gate-one-day-one.html
+++ b/lean-resource-gate-one-day-one.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="CIstyles.css">
     
         <title>Swift Digital Marketing | Apprentices, Apprenticeship Training, Upskilling</title>
     </head>
