--- a/lean-resource-gate-one-day-one.html
+++ b/lean-resource-gate-one-day-one.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="CIstyles.css">
     
-        <title>Swift Digital Marketing | Apprentices, Apprenticeship Training, Upskilling</title>
+        <title>Swift CI | Lean Resource | Gate One Day One</title>
     </head>
     <body>
 
