--- a/repo.html
+++ b/repo.html
@@ -13,6 +13,7 @@
   
   <h2>Swift CI Lessons</h2>
   <a href="lean-resource-gate-one-day-one.html"  target="_blank">Gate one day one</a>
+  <img src="qr/g1d1.png" style="max-height:5%; max-width:5%;">
 
   
   </body>
