--- a/repo.html
+++ b/repo.html
@@ -11,10 +11,27 @@
   <a href="index.html"  target="_blank">What a Swift DM Apprentice can do for your business</a>
   <img src="qr/SwiftDM-Apprentice.png" style="max-height:5%; max-width:5%;">
   
+  
+<div class="cilessons">
   <h2>Swift CI Lessons</h2>
   <a href="lean-resource-gate-one-day-one.html"  target="_blank">Gate one day one</a>
   <img src="qr/g1d1.png" style="max-height:5%; max-width:5%;">
-
   
+    <a href="lean-resource-gate-one-day-two.html"  target="_blank">Gate one day one</a>
+  <img src="qr/g1d2.png" style="max-height:5%; max-width:5%;">
+  
+    <a href="lean-resource-gate-two-day-one.html"  target="_blank">Gate one day one</a>
+  <img src="qr/g2d1.png" style="max-height:5%; max-width:5%;">
+  
+    <a href="lean-resource-gate-two-day-two.html"  target="_blank">Gate one day one</a>
+  <img src="qr/g2d2.png" style="max-height:5%; max-width:5%;">
+  
+    <a href="lean-resource-gate-three-day-one.html"  target="_blank">Gate one day one</a>
+  <img src="qr/g3d1.png" style="max-height:5%; max-width:5%;">
+  
+    <a href="lean-resource-gate-three-day-two.html"  target="_blank">Gate one day one</a>
+  <img src="qr/g3d2.png" style="max-height:5%; max-width:5%;">
+
+</div>  
   </body>
 </html>
