--- a/repo.html
+++ b/repo.html
@@ -3,7 +3,8 @@
   <head>
     <title>Repository</title>
     <style>
-      html{font-family:calibri; font-size:16px;}
+      html{font-family:calibri; font-size:16px;display:block;}
+      
     </style>
   </head>
 <body>
