--- a/repo.html
+++ b/repo.html
@@ -3,8 +3,8 @@
   <head>
     <title>Repository</title>
     <style>
-      html{font-family:calibri; font-size:16px;display:block;}
-      
+      html{font-family:calibri; font-size:16px;}
+      .cilessons{border:3px solid black;}
     </style>
   </head>
 <body>
@@ -16,22 +16,22 @@
 <div class="cilessons">
   <h2>Swift CI Lessons</h2>
   <a href="lean-resource-gate-one-day-one.html"  target="_blank">Gate one day one</a>
-  <img src="qr/g1d1.png" style="max-height:5%; max-width:5%;">
+  <img src="qr/g1d1.png" style="max-height:5%; max-width:5%;"><br><br>
   
     <a href="lean-resource-gate-one-day-two.html"  target="_blank">Gate one day two</a>
-  <img src="qr/g1d2.png" style="max-height:5%; max-width:5%;">
+  <img src="qr/g1d2.png" style="max-height:5%; max-width:5%;"><br><br>
   
     <a href="lean-resource-gate-two-day-one.html"  target="_blank">Gate two day one</a>
-  <img src="qr/g2d1.png" style="max-height:5%; max-width:5%;">
+  <img src="qr/g2d1.png" style="max-height:5%; max-width:5%;"><br><br>
   
     <a href="lean-resource-gate-two-day-two.html"  target="_blank">Gate two day two</a>
-  <img src="qr/g2d2.png" style="max-height:5%; max-width:5%;">
+  <img src="qr/g2d2.png" style="max-height:5%; max-width:5%;"><br><br>
   
     <a href="lean-resource-gate-three-day-one.html"  target="_blank">Gate three day one</a>
-  <img src="qr/g3d1.png" style="max-height:5%; max-width:5%;">
+  <img src="qr/g3d1.png" style="max-height:5%; max-width:5%;"><br><br>
   
     <a href="lean-resource-gate-three-day-two.html"  target="_blank">Gate three day two</a>
-  <img src="qr/g3d2.png" style="max-height:5%; max-width:5%;">
+  <img src="qr/g3d2.png" style="max-height:5%; max-width:5%;"><br><br>
 
 </div>  
   </body>
