--- a/repo.html
+++ b/repo.html
@@ -4,7 +4,7 @@
     <title>Repository</title>
     <style>
       html{font-family:calibri; font-size:16px;}
-      .cilessons{border:3px solid black;}
+      .cilessons{border:3px solid black; text-align:center;}
     </style>
   </head>
 <body>
