--- a/repo.html
+++ b/repo.html
@@ -6,13 +6,15 @@
       html{font-family:calibri; font-size:16px;}
       .cilessons{border:3px solid black;border-style: dashed double dashed;}
       body{text-align:center;}
+      .misc{padding:20px; border: 3px solid red; border-style: double;
     </style>
   </head>
 <body>
+ <div class="misc">
   <h1>Swift DM Repository</h1>
   <a href="index.html"  target="_blank">What a Swift DM Apprentice can do for your business</a>
   <img src="qr/SwiftDM-Apprentice.png" style="max-height:5%; max-width:5%;">
-  
+  </div>
   
 <div class="cilessons">
   <h2>Swift CI Lessons</h2>
