--- a/repo.html
+++ b/repo.html
@@ -6,7 +6,7 @@
       html{font-family:calibri; font-size:16px;}
       .cilessons{border:3px solid black;border-style: dashed double dashed;}
       body{text-align:center;}
-      .misc{padding:20px; border: 3px solid red; border-style: double;
+      .misc{padding:20px; border: 3px solid red; border-style: double;}
     </style>
   </head>
 <body>
