--- a/repo.html
+++ b/repo.html
@@ -36,6 +36,10 @@
     <a href="lean-resource-gate-three-day-two.html"  target="_blank">Gate three day two</a>
   <img src="qr/g3d2.png" style="max-height:5%; max-width:5%;"><br><br>
 
-</div>  
+</div>
+  
+  <div class="swifthandbook">
+    <a href="swiftcihandbook.html" target="_blank">Swift CI Learner Handbook</a>
+  </div>
   </body>
 </html>
