--- a/swiftcihandbook.html
+++ b/swiftcihandbook.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="images">
-<img src="swiftcl handbook/SWIFTCI- LearnerHandbook_Master1024_1">
+<img src="cihandbook/SWIFTCI- LearnerHandbook_Master1024_1">
 <img src="gatetwo/tile33.jpg">
 <img src="gatetwo/tile34.jpg">
 <img src="gatetwo/tile35.jpg">
