--- a/swiftcihandbook.html
+++ b/swiftcihandbook.html
@@ -8,43 +8,28 @@
 <body>
     <div class="container">
         <div class="images">
-<img src="cihandbook/SWIFTCI- LearnerHandbook_Master1024_1">
-<img src="gatetwo/tile33.jpg">
-<img src="gatetwo/tile34.jpg">
-<img src="gatetwo/tile35.jpg">
-<img src="gatetwo/tile36.jpg">
-<img src="gatetwo/tile37.jpg">
-<img src="gatetwo/tile38.jpg">
-<img src="gatetwo/tile39.jpg">
-<img src="gatetwo/tile40.jpg">
-<img src="gatetwo/tile41.jpg">
-<img src="gatetwo/tile42.jpg">
-<img src="gatetwo/tile43.jpg">
-<img src="gatetwo/tile44.jpg">
-<img src="gatetwo/tile45.jpg">
-<img src="gatetwo/tile46.jpg">
-<img src="gatetwo/tile47.jpg">
-<img src="gatetwo/tile48.jpg">
-<img src="gatetwo/tile49.jpg">
-<img src="gatetwo/tile50.jpg">
-<img src="gatetwo/tile51.jpg">
-<img src="gatetwo/tile52.jpg">
-<img src="gatetwo/tile53.jpg">
-<img src="gatetwo/tile54.jpg">
-<img src="gatetwo/tile55.jpg">
-<img src="gatetwo/tile56.jpg">
-<img src="gatetwo/tile57.jpg">
-<img src="gatetwo/tile58.jpg">
-<img src="gatetwo/tile59.jpg">
-<img src="gatetwo/tile60.jpg">
-<img src="gatetwo/tile61.jpg">
-<img src="gatetwo/tile62.jpg">
-<img src="gatetwo/tile63.jpg">
-          <img src="gatetwo/tile64.jpg">
-          <img src="gatetwo/tile65.jpg">
-          <img src="gatetwo/tile66.jpg">
-          <img src="gatetwo/tile67.jpg">
-          <img src="gatetwo/tile68.jpg">
+            <img src="cihandbook/1.jpg">
+            <img src="cihandbook/2.jpg">
+            <img src="cihandbook/3.jpg">
+            <img src="cihandbook/4.jpg">
+            <img src="cihandbook/5.jpg">
+            <img src="cihandbook/6.jpg">
+            <img src="cihandbook/7.jpg">
+            <img src="cihandbook/8.jpg">
+            <img src="cihandbook/9.jpg">
+            <img src="cihandbook/10.jpg">
+            <img src="cihandbook/11.jpg">
+            <img src="cihandbook/12.jpg">
+            <img src="cihandbook/13.jpg">
+            <img src="cihandbook/14.jpg">
+            <img src="cihandbook/15.jpg">
+            <img src="cihandbook/16.jpg">
+            <img src="cihandbook/17.jpg">
+            <img src="cihandbook/18.jpg">
+            <img src="cihandbook/19.jpg">
+            <img src="cihandbook/20.jpg">
+            <img src="cihandbook/21.jpg">
+
         </div>
     </div>
 </body>
