--- a/repo.html
+++ b/repo.html
@@ -7,6 +7,7 @@
       .cilessons{border:3px solid black;border-style: dashed double dashed;}
       body{text-align:center;}
       .misc{padding:20px; border: 3px solid red; border-style: double;}
+      img{max-height:50%; max-width:50%;}
     </style>
   </head>
 <body>
@@ -40,6 +41,7 @@
   
   <div class="swifthandbook">
     <a href="swiftcihandbook.html" target="_blank">Swift CI Learner Handbook</a>
+    <img src="qr/swiftcihandbook.png">
   </div>
   </body>
 </html>
