--- a/repo.html
+++ b/repo.html
@@ -7,7 +7,7 @@
       .cilessons{border:3px solid black;border-style: dashed double dashed;}
       body{text-align:center;}
       .misc{padding:20px; border: 3px solid red; border-style: double;}
-      img{max-height:50%; max-width:50%;}
+      * img{max-height:50%; max-width:50%;}
     </style>
   </head>
 <body>
