--- a/repo.html
+++ b/repo.html
@@ -41,7 +41,7 @@
   
   <div class="swifthandbook">
     <a href="swiftcihandbook.html" target="_blank">Swift CI Learner Handbook</a>
-    <img src="qr/swiftcihandbook.png">
+    <img src="qr/swiftcihandbook.png" style="max-height:5%; max-width: 5%;">
   </div>
   </body>
 </html>
