--- a/repo.html
+++ b/repo.html
@@ -36,7 +36,9 @@
   <hr>
     <a href="lean-resource-gate-three-day-two.html"  target="_blank">Gate three day two</a>
   <img src="qr/g3d2.png" style="max-height:5%; max-width:5%;"><br><br>
-
+  <hr>
+    <a href="gate-4-day-1.html"  target="_blank">Gate three day two</a>
+  <img src="" style="max-height:5%; max-width:5%;"><br><br>
 </div>
   
   <div class="swifthandbook">
