--- a/gate-4-day-1.html
+++ b/gate-4-day-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CIstyles.css">
-    <title>Swift CI | Lean Resources | Gate One Day One</title>
+    <title>Swift CI | Lean Resources | Gate Four Day One</title>
 </head>
 <body>
     <div class="container">
