--- a/repo.html
+++ b/repo.html
@@ -39,6 +39,9 @@
   <hr>
     <a href="gate-4-day-1.html"  target="_blank">Gate three day two</a>
   <img src="" style="max-height:5%; max-width:5%;"><br><br>
+    <hr>
+    <a href="SWOT.html"  target="_blank">SWOT</a>
+  <img src="" style="max-height:5%; max-width:5%;"><br><br>
 </div>
   
   <div class="swifthandbook">
