--- a/repo.html
+++ b/repo.html
@@ -42,6 +42,9 @@
     <hr>
     <a href="SWOT.html"  target="_blank">SWOT</a>
   <img src="" style="max-height:5%; max-width:5%;"><br><br>
+      <hr>
+    <a href="TPM.html"  target="_blank">SWOT</a>
+  <img src="" style="max-height:5%; max-width:5%;"><br><br>
 </div>
   
   <div class="swifthandbook">
