--- a/repo.html
+++ b/repo.html
@@ -43,7 +43,7 @@
     <a href="SWOT.html"  target="_blank">SWOT</a>
   <img src="" style="max-height:5%; max-width:5%;"><br><br>
       <hr>
-    <a href="TPM.html"  target="_blank">SWOT</a>
+    <a href="TPM.html"  target="_blank">TPM</a>
   <img src="" style="max-height:5%; max-width:5%;"><br><br>
 </div>
   
