--- a/repo.html
+++ b/repo.html
@@ -37,7 +37,7 @@
     <a href="lean-resource-gate-three-day-two.html"  target="_blank">Gate three day two</a>
   <img src="qr/g3d2.png" style="max-height:5%; max-width:5%;"><br><br>
   <hr>
-    <a href="gate-4-day-1.html"  target="_blank">Gate three day two</a>
+    <a href="gate-4-day-1.html"  target="_blank">Gate Four Day One</a>
   <img src="" style="max-height:5%; max-width:5%;"><br><br>
     <hr>
     <a href="SWOT.html"  target="_blank">SWOT</a>
