--- a/repo.html
+++ b/repo.html
@@ -38,13 +38,13 @@
   <img src="qr/g3d2.png" style="max-height:5%; max-width:5%;"><br><br>
   <hr>
     <a href="gate-4-day-1.html"  target="_blank">Gate Four Day One</a>
-  <img src="" style="max-height:5%; max-width:5%;"><br><br>
+  <img src="gate 4 day 1/CI problem solving.png" style="max-height:5%; max-width:5%;"><br><br>
     <hr>
     <a href="SWOT.html"  target="_blank">SWOT</a>
-  <img src="" style="max-height:5%; max-width:5%;"><br><br>
+  <img src="SWOT/SWOT.png" style="max-height:5%; max-width:5%;"><br><br>
       <hr>
     <a href="TPM.html"  target="_blank">TPM</a>
-  <img src="" style="max-height:5%; max-width:5%;"><br><br>
+  <img src="TPM/TPM QR code.png" style="max-height:5%; max-width:5%;"><br><br>
 </div>
   
   <div class="swifthandbook">
