--- a/repo.html
+++ b/repo.html
@@ -50,6 +50,10 @@
   <div class="swifthandbook">
     <a href="swiftcihandbook.html" target="_blank">Swift CI Learner Handbook</a>
     <img src="qr/swiftcihandbook.png" style="max-height:5%; max-width: 5%;">
+    
+    
+        <a href="apprenticehandbook.html" target="_blank">Swift DM Appprentice Handbook</a>
+    <img src="" style="max-height:5%; max-width: 5%;">
   </div>
   </body>
 </html>
