--- a/apprenticehandbook.html
+++ b/apprenticehandbook.html
@@ -8,28 +8,28 @@
 <body>
     <div class="container">
         <div class="images">
-            <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_01.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_02.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_03.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_04.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_05.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_06.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_07.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_08.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_09.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_10.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_11.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_12.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_13.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_14.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_15.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_16.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_17.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_18.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_19.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_20.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_21.png">
-          <img src="/apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_22.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_01.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_02.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_03.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_04.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_05.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_06.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_07.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_08.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_09.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_10.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_11.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_12.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_13.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_14.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_15.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_16.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_17.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_18.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_19.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_20.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_21.png">
+          <img src="apprentice handbook/Swift Digital Marketing Apprenticeship Handbook_Page_22.png">
            
         </div>
     </div>
