--- a/apprenticehandbook.html
+++ b/apprenticehandbook.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>body{background-color:white;}</style>
     <link rel="stylesheet" href="CIstyles.css">
     <title>Swift Digital Marketing - Apprentice Handbook</title>
 </head>
